--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
             <h2>⚙️ Konfigurasi Session</h2>
             <form id="botConfig">
                 <div class="form-group">
-                    <label for="targetUrl">🎯 Target GitHub URL:</label>
+                    <label for="targetUrl">🎯 Target Erimo Traffic 4 URL:</label>
                     <input type="url" id="targetUrl" required 
-                           placeholder="https://github.com/username/repository"
-                           value="https://github.com">
+                           placeholder="https://url-taget.com/"
+                           value="https://cryptoajah.blogspot.com">
                 </div>
                 
                 <div class="form-row">
